Revision history for Perl-PrereqScanner

{{$NEXT}}

1.014     2012-07-26 13:22:02 America/New_York
  - require a more recent PPI for various bugfixes that broke tests
    (thanks for the report, Salve J. Nilsen)

1.013     2012-07-01 17:21:25 America/New_York
 - make scan_prereqs scan directories recursively (thanks, Jakob Voss)

 - if PPI parsing fails, include PPI::Document->errstr in error message
   (Christopher J. Madsen)

1.012     2012-06-27 16:17:28 America/New_York
  - fix "with (...)" where spaces occur between with and parenthesized list
    (thanks to celogeek for the failing test)

1.011     2012-03-07 13:08:49 Europe/Paris
  - require CPAN::Meta::Requirements 2.120630 and fix tests to reflect
    its v-string normalizing behavior

1.010     2012-02-22 10:07:46 America/New_York
  - fix documentation bug (thanks to Marius Olsthoorn for the report)

  - add a test case to prove someone wrong on the internet

1.009     2012-01-01 23:11:51 America/New_York
 - switch from Version::Requirements to CPAN::Meta::Requirements

1.008     2011-11-01 10:35:46 Europe/Paris
 - fix rt#72062 - look for "require Module; Module->VERSION(min);"
   (Christopher J. Madsen)

1.007     2011-08-31 09:22:12 Europe/Paris
 - new option --combine for scan_prereqs script (randy stauner)

1.006     2011-08-20 14:03:24 Europe/Paris
  - add the POE scanner for POE components (David Golden)

1.005     2011-08-17 18:39:22 America/New_York
  - stop stripping "always core" prereqs like strict and warnings

  - add the Aliased scanner for aliased.pm (thanks, David Golden)

1.004     2011-05-30 21:02:52 America/New_York
  - avoid calling a method on undef (i.e., cope with PPI doing surprising
    things)

1.003     2011-05-16 15:46:02 America/New_York
  - fix a bug that caused things like "within" and "trextends" to trigger
    the Moose scanner

1.002     2011-02-02 10:21:55 Europe/Paris
 - fix rt#61608 - missing description in whatisentry for TestMore.pm
