@@ -2,6 +2,9 @@ Revision history for Perl-PrereqScanner
 
 {{$NEXT}}
 
+   - add a --cpanm option to bin/scan_prereqs to produce output that
+     can be piped into cpanm (John SJ Anderson)
+
 1.014     2012-07-26 13:22:02 America/New_York
   - require a more recent PPI for various bugfixes that broke tests
     (thanks for the report, Salve J. Nilsen)
